--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,8 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-html, body {
+html,
+body {
     height: 100vh;
 }
 
@@ -80,4 +81,48 @@ img {
     width: 800px;
     border: none;
     border-radius: 30px;
+}
+
+@media(max-width: 450px) {
+    .pai {
+        flex-direction: column;
+    }
+
+    .filho1 {
+        width: 100%;
+        padding-left: 0px;
+        margin-bottom: 10px;
+    }
+
+    .filho2 {
+        width: 100%;
+    }
+
+    .buttonGroup {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+
+    .bt-css {
+        width: 350px;
+        margin-bottom: 10px;
+    }
+
+    .bt-tema {
+        width: 350px;
+        margin: 0px;
+    }
+
+    h1 {
+        font-size: 50px;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    img {
+        width: 350px;
+    }
 }
