--- a/style/style.css
+++ b/style/style.css
@@ -83,7 +83,7 @@ img {
     border-radius: 30px;
 }
 
-@media(max-width: 450px) {
+@media(max-width: 550px) {
     .pai {
         flex-direction: column;
     }
@@ -117,12 +117,58 @@ img {
     }
 
     h1 {
-        font-size: 50px;
+        font-size: 40px;
         text-align: center;
         margin-bottom: 10px;
     }
 
     img {
         width: 350px;
+    }
+}
+
+@media(max-width: 830px) and (min-width: 551px) {
+    .pai {
+        flex-direction: column;
+    }
+
+    .filho1 {
+        width: 100%;
+        padding-left: 0px;
+        margin-bottom: 10px;
+    }
+
+    .filho2 {
+        width: 100%;
+    }
+
+    .buttonGroup {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+
+    .bt-css {
+        width: 330px;
+        margin-right: 25px;
+    }
+
+    .bt-tema {
+        width: 330px;
+        margin-left: 25px;
+        margin: 0px;
+    }
+
+    h1 {
+        font-size: 60px;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    img {
+        width: 700px;
+        border-radius: 30px;
     }
 }
